busybox-httpd_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: busybox-httpd
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kickstart.pik8s.home`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: busybox-httpd
      port: 8088
